<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edmondson_jones.james.capturethecampus.HelpAndCreditsActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_weight="1"
        android:background="@color/colorRed"
        android:fontFamily="sans-serif"
        android:padding="10sp"
        android:text="@string/app_name_presentable"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/helpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/help_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_alignStart="@+id/textViewTitle" />

    <TextView
        android:id="@+id/helpContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/help_content"
        android:layout_below="@+id/helpTitle"
        android:layout_marginTop="19dp"
        android:layout_alignLeft="@+id/helpTitle"
        android:layout_alignStart="@+id/helpTitle"
        android:layout_alignRight="@+id/textViewTitle"
        android:layout_alignEnd="@+id/textViewTitle" />

    <TextView
        android:id="@+id/creditsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_below="@+id/helpContent"
        android:layout_alignLeft="@+id/helpContent"
        android:layout_alignStart="@+id/helpContent"
        android:layout_marginTop="19dp" />

    <TextView
        android:id="@+id/creditsContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/credits_content"
        android:textSize="14sp"
        android:layout_below="@+id/creditsTitle"
        android:layout_alignLeft="@+id/creditsTitle"
        android:layout_alignStart="@+id/creditsTitle"
        android:layout_alignRight="@+id/helpContent"
        android:layout_alignEnd="@+id/helpContent" />

</RelativeLayout>
